--- a/Linkdea.css
+++ b/Linkdea.css
@@ -238,21 +238,13 @@
 }
 
 .u-section-3 .u-container-layout-1 {
-  padding: 75px 60px 26px;
+  padding: 67px 60px 26px;
 }
 
 .u-section-3 .u-icon-1 {
   height: 64px;
   width: 64px;
-  margin: -37px auto 0 0;
-}
-
-.u-section-3 .u-text-2 {
-  text-transform: uppercase;
-  font-size: 1.125rem;
-  letter-spacing: 1px;
-  font-weight: 400;
-  margin: -42px 17px 0 81px;
+  margin: -41px auto 0;
 }
 
 .u-section-3 .u-btn-1 {
@@ -260,7 +252,7 @@
   font-weight: 700;
   font-size: 1.5rem;
   letter-spacing: 1px;
-  margin: 39px -11px 0 0;
+  margin: 14px auto 0;
   padding: 0;
 }
 
@@ -281,16 +273,9 @@
     width: -1px;
   }
 
-  .u-section-3 .u-text-2 {
-    font-size: 1rem;
-    width: auto;
-    margin-top: 23px;
-    margin-left: 78px;
-  }
-
   .u-section-3 .u-btn-1 {
     font-size: 1.125rem;
-    margin-top: 7px;
+    margin-top: 23px;
     margin-right: 9px;
   }
 }
@@ -318,17 +303,10 @@
   .u-section-3 .u-icon-1 {
     height: 55px;
     width: 55px;
-    margin-left: auto;
-  }
-
-  .u-section-3 .u-text-2 {
-    margin-top: 19px;
-    margin-left: 8px;
-    margin-right: 8px;
   }
 
   .u-section-3 .u-btn-1 {
-    margin-top: 12px;
+    margin-top: 19px;
     margin-right: auto;
   }
 }
